// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// Kiwibit initial relational model for Supabase.
//
// This model is schema-agnostic on purpose:
// - Apply it to one schema for main environment (example: app_main)
// - Apply the same model to another schema for release environment (example: app_release)
//
// Recommendation:
// - Keep NextAuth tables in the same schema used by the running environment.
// - Use Supabase RLS to enforce: members can update only their own profile/content.

Enum user_role {
  admin
  editor
  member_manager
  member
}

Enum post_status {
  draft
  in_review
  published
  scheduled
  archived
}

Enum contact_status {
  pending
  sent
  failed
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(160) [not null]
  email varchar(255) [not null, unique]
  email_verified timestamp
  image_url text
  role user_role [not null, default: 'member']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (email)
    (role)
  }
}

Table member_profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique]
  display_name varchar(160) [not null]
  bio text
  avatar_url text
  headline varchar(180)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table member_links {
  id uuid [pk, default: `gen_random_uuid()`]
  member_profile_id uuid [not null]
  label varchar(80) [not null]
  url text [not null]
  position int [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table projects {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(180) [not null]
  slug varchar(180) [not null, unique]
  description text [not null]
  repo_url text
  live_url text
  cover_image_url text
  created_by_user_id uuid [not null]
  is_featured boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (is_featured)
    (created_by_user_id)
  }
}

Table project_members {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null]
  user_id uuid [not null]
  contribution_role varchar(80)
  created_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, user_id) [unique]
  }
}

Table experiences {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  title varchar(180) [not null]
  organization varchar(180)
  description text
  start_date date
  end_date date
  is_current boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id)
  }
}

Table posts {
  id uuid [pk, default: `gen_random_uuid()`]
  author_id uuid [not null]
  title varchar(220) [not null]
  slug varchar(240) [not null, unique]
  excerpt text
  content text [not null, note: 'Blog post content']
  cover_image_url text
  status post_status [not null, default: 'draft']
  published_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (author_id)
    (status)
    (published_at)
  }
}

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(60) [not null, unique]
  slug varchar(80) [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table post_tags {
  post_id uuid [not null]
  tag_id uuid [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (post_id, tag_id) [pk]
  }
}

Table home_sections {
  id uuid [pk, default: `gen_random_uuid()`]
  section_key varchar(80) [not null, unique, note: 'hero, projects_summary, members_summary']
  title varchar(180)
  content text
  content_json json
  updated_by_user_id uuid
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table contact_submissions {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(160) [not null]
  email varchar(255) [not null]
  message text [not null]
  webhook_status contact_status [not null, default: 'pending']
  webhook_response_code int
  created_at timestamp [not null, default: `now()`]
}

// NextAuth tables
Table nextauth_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  type varchar(60) [not null]
  provider varchar(100) [not null]
  provider_account_id varchar(200) [not null]
  refresh_token text
  access_token text
  expires_at int
  token_type varchar(40)
  scope text
  id_token text
  session_state text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (provider, provider_account_id) [unique]
    (user_id)
  }
}

Table nextauth_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  session_token varchar(255) [not null, unique]
  user_id uuid [not null]
  expires timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id)
    (expires)
  }
}

Table nextauth_verification_tokens {
  identifier varchar(255) [not null]
  token varchar(255) [not null, unique]
  expires timestamp [not null]

  indexes {
    (identifier, token) [pk]
  }
}

Ref: member_profiles.user_id > users.id
Ref: member_links.member_profile_id > member_profiles.id
Ref: projects.created_by_user_id > users.id
Ref: project_members.project_id > projects.id
Ref: project_members.user_id > users.id
Ref: experiences.user_id > users.id
Ref: posts.author_id > users.id
Ref: post_tags.post_id > posts.id
Ref: post_tags.tag_id > tags.id
Ref: home_sections.updated_by_user_id > users.id
Ref: nextauth_accounts.user_id > users.id
Ref: nextauth_sessions.user_id > users.id
